test/files/pos/t5957/Test.java
public class Test {
  public class Bar {
    public Bar(int i) {
    }
  }

  public static class Baz {
    public Baz(int i) {
    }
  }
}
