test/files/neg/t11644c/J.java

public abstract class J {
        public abstract int f(int i);
}
interface K {
	int f(int i);
}
